Resolved popular-single misalignment.

--- a/style.css
+++ b/style.css
@@ -257,8 +257,8 @@ ul.popular-list .popular-item {
 
 ul.popular-list .popular-rank {
 	font-size: 2.5em;
-	float: left;
 	width: 28px;
+	float: left;
 	padding-right: 5px;
 	text-align: center;
 	border-right: 2px solid #ddd;
@@ -267,8 +267,9 @@ ul.popular-list .popular-rank {
 ul.popular-list .popular-title {
 	width: 275px;
 	margin-left: 35px;
-	padding: 5px 0 0 10px;
+	padding-left: 10px;
 	font-size: 1.15rem;
+	min-height: 61px;
 }
 
 ul.popular-list .popular-title a {
